Added sort indicator and column selection. Added squel as query builder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Lightroom Reader</title>
+    <title>SQLite Reader</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
@@ -12,6 +12,8 @@
   <body style="height: 100%">
     <div id="content" class="container-fluid" style="height: 100%"></div>
     <script type="text/javascript" src="sql.js"></script>
-    <script type="text/babel" src="app.js"></script>
+    <script type="text/javascript" src="squel-basic.js"></script>
+    <script type="text/babel" src="react-checkbox-group.jsx"></script>
+    <script type="text/babel" src="app.jsx"></script>
   </body>
 </html>
