Refactoring and splitting code.
Added button to load test file
Refactored code and split responsibilities among classes
Added multi-series charting
Added bar chart support and selector
Various improvements

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="sql.js"></script>
     <script type="text/javascript" src="squel-basic.js"></script>
     <script type="text/babel" src="react-checkbox-group.jsx"></script>
+    <script type="text/babel" src="table.jsx"></script>
+    <script type="text/babel" src="chart.jsx"></script>
     <script type="text/babel" src="app.jsx"></script>
   </body>
 </html>
